[tool.poetry]
name = "redherringserver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sockets = "^1.0.0"
bs4 = "^0.0.1"
flask = "^1.1.2"
flask-cors = "^3.0.9"
lxml = "^4.6.1"
numpy = "^1.19.4"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
